--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Edusathi - AI-Powered Learning Platform" />
+    <meta name="keywords" content="Edusathi, AI, Learning, Platform" />
+    <meta name="author" content="Edusathi" />
+    <link rel="icon" href="/favicon.svg" />
     <title>Edusathi</title>
   </head>
   <body>
